# plastic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Vagrantfile  agents.md
.github/workflows/: container.yml  rust.yml
cargo-rom/: Cargo.toml
cargo-rom/src/: main.rs
cargo-rom/tests/: link.rs
docker/: entrypoint.sh
scripts/: download-latest-artifacts.sh  run-tui.sh  run-ui.sh
test_roms/: .startup.nes
