[package]
name = "cargo-rom"
version = "0.1.0"
edition = "2021"
description = "ROM management helper for the Plastic project"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
